--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,3 +3,19 @@
     text-align: center;
     padding: 1% 5%;
 }
+
+button {
+    margin: 1%;
+    padding: .5%;
+    background-color: black;
+    color: lime;
+    float: left;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bold;
+}
+
+#searchButtons::after {
+    content: "";
+    clear: both;
+    display: table;
+}
